--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ main {
     flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 20px;
+    padding: 10px;
 }
 
 section {
@@ -57,16 +57,16 @@ section {
     padding: 20px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
-    box-shadow: 0px 0px 20px 1px rgba(255, 255, 255, 0.252);
-    width: 90%;
-    margin: 0 auto; /* Centraliza o conteúdo */
+    box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.252);
+    width: 95%;
+    margin: 10px auto;
 }
 
 .section-examples {
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     gap: 2em;
 }
@@ -94,7 +94,7 @@ footer {
     text-align: center;
     border-radius: 5px;
     color: white;
-    min-width: 20px;
+    width: 20px;
     flex: 1;
 }
 
