--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,26 @@ footer {
     margin-top: 3em;
 }
 
+footer figure {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    margin: 0;
+}
+
+.icon_footer {
+    width: 5vw;
+    height: 3vh;
+    align-self: center;
+}
+
+.icon_footer:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+    transition: .3s ease-out;
+}
+
 .flex-container {
     display: flex;
     flex-direction: row;
